--- a/_posts/work/2016-11-21-pygreen.md
+++ b/_posts/work/2016-11-21-pygreen.md
@@ -14,4 +14,4 @@ image:
 
 {{ page.excerpt }}
 
-I started work on [pygreen](https://github.com/vivshaw/pygreen) because I had visual art on the brain & decided to learn my way around [Pillow](https://python-pillow.org/), the friendly PIL fork. Doing some [chroma keying](https://en.wikipedia.org/wiki/Chroma_key) seemed like a simple enough start, and indeed it was. The code just loads up two images, applies a very simple green-recognition filter to the first image, and replaces all pixels caught by the filter with the corresponding pixels from the second image. I ended working with the raw image data and `putdata()`, because working with `getpixel()` and `putpixel()` on every pixel of a high-res image turned out to be agonizingly slow. Other than that, there's nothing fancy and no tricks. The code is [on GitHub here](https://github.com/vivshaw/pygreen).
+I started work on [pygreen](https://github.com/vivshaw/pygreen) because I had visual art on the brain & decided to learn my way around [Pillow](https://python-pillow.org/), the friendly PIL fork. Doing some [chroma keying](https://en.wikipedia.org/wiki/Chroma_key) seemed like a simple enough start, and indeed it was. The code just loads up two images, applies a very simple green-recognition filter to the first image, and replaces all pixels caught by the filter with the corresponding pixels from the second image. I ended up working with the raw image data and `putdata()`, because working with `getpixel()` and `putpixel()` on every pixel of a high-res image turned out to be agonizingly slow. Other than that, there's nothing fancy and no tricks. The code is [on GitHub here](https://github.com/vivshaw/pygreen).
