Fix project image credit

--- a/_posts/work/2016-11-21-pygreen.md
+++ b/_posts/work/2016-11-21-pygreen.md
@@ -8,7 +8,7 @@ share: false
 image:
   feature: pygreen.png
   teaser: pygreen-teaser.png
-  credit: Hannah Vivian Shaw
+  credit: NASA / Brehms Tierleben
   creditlink: http://vivshaw.github.io
 ---
 
