--- a/_posts/blog/2020-11-08-hiatus.md
+++ b/_posts/blog/2020-11-08-hiatus.md
@@ -7,7 +7,7 @@ modified: 2020-11-08T04:30:21-05:00
 tags: [life, work]
 comments: true
 image:
-  teaser: im-in-teaser.png
+  teaser: imin-teaser.png
 ---
 
 {{ page.excerpt }}
