one article mostly works

--- a/pages/blog/build-you-a-tweetbot.mdx
+++ b/pages/blog/build-you-a-tweetbot.mdx
@@ -1,3 +1,4 @@
+import ArticlePage from "@templates/article.template";
 import metaImage from "./bart-zimny-W5XTTLpk1-I-unsplash.jpg";
 
 export const meta = {
@@ -5,10 +6,11 @@ export const meta = {
   title: "Build You a Python TweetBot: Tweepy & Markovify",
   blurb: "Using Markov chains to construct a literature-penning Twitter bot",
   tags: ["python", "twitter", "Markov chains", "bots"],
+  slug: "build-you-a-tweetbot",
   image: metaImage,
 };
 
-Perhaps you've run across Twitter bots like [@thesefutures](http://motherboard.vice.com/read/twitter-bot-predicts-these-futures) or [@thinkpiecebot](https://twitter.com/thinkpiecebot) and wondered how to do that yourself. It's surprisingly simple and you should give it a try! For the less-technically-inclined, one can even create a bot with minimal code using [a tool that will handle the heavy lifting for you](http://cheapbotsdonequick.com/). But if, Reader dearest, you desire something more than that— you've come to the right place. Today we're going to get our hands dirty with Python and the Twitter API, and code our own Twitter bot from scratch. Later, we'll even go over deploying the bot to Heroku and letting it loose to act autonomously in the cloud. If this piques your curiosity, then I'd love to show you how simple it can really be, with a pinch of Python magic.
+Perhaps you've run across Twitter bots like [@thesefutures](http://motherboard.vice.com/read/twitter-bot-predicts-these-futures) or [@thinkpiecebot](https://twitter.com/thinkpiecebot) and wondered how to do that yourself. It's surprisingly simple and you should give it a try! For the less-technically-inclined, one can create a bot with minimal code using [a tool that will handle the heavy lifting for you](http://cheapbotsdonequick.com/). But if perchance you desire something more than that— you've come to the right place. Today we're going to get our hands dirty with Python and the Twitter API, and code our own Twitter bot from scratch. If this piques your curiosity, then I'd love to show you how simple it can really be, with a pinch of Python magic.
 
 <!--include toc.html -->
 
@@ -24,12 +26,51 @@ To start, you'll need to get some Twitter credentials so that you can access the
 
 Go to [apps.twitter.com](https://apps.twitter.com/) and click on the "Create New App" button. You'll need to fill out a few fields for your bot's name, description, and website, and to agree to the [Twitter Developer Agreement](https://dev.twitter.com/overview/terms/agreement-and-policy), and then you'll have a new app! Now, go to the Permissions tab and ensure that your app has read and write permissions. Finally, go to the Keys and Access Tokens tab, and create your access tokens. We'll need to store these for your bot.
 
-<i class="fa fa-exclamation-circle" aria-hidden="true"></i> It's important that you
-keep these keys private, because anyone with access to them can access the API in
-your name and freely post to your account. To prevent this from happening, we're
-going to ensure that your keys do not get checked in to version control. Make a directory
-for your project, `git init` as you usually would, then create a file entitled `.gitignore`
-with these contents:
+⚠️ It's important that you keep these keys private, because anyone with access to them can access the API in your name and freely post to your account! To prevent this from happening, we're going to ensure that your keys do not get checked in to version control. Make a directory for your project, `git init` as you usually would, then create a file entitled `.gitignore` with these contents:
+
+```js
+import React from "react";
+import { graphql, useStaticQuery } from "gatsby";
+import styled from "@emotion/styled";
+
+import SocialIcons from "@icons";
+import mediaqueries from "@styles/media";
+
+const icons = {
+  dribbble: SocialIcons.DribbbleIcon,
+  linkedin: SocialIcons.LinkedinIcon,
+  twitter: SocialIcons.TwitterIcon,
+  facebook: SocialIcons.FacebookIcon,
+  instagram: SocialIcons.InstagramIcon,
+  github: SocialIcons.GithubIcon,
+};
+
+function SocialLinks({ fill = "#73737D" }: { fill: string }) {
+  const result = useStaticQuery(socialQuery);
+  const socialOptions = result.allSite.edges[0].node.siteMetadata.social;
+
+  return (
+    <>
+      {socialOptions.map((option) => {
+        const Icon = icons[option.name];
+
+        return (
+          <SocialIconContainer
+            key={option.name}
+            target="_blank"
+            rel="noopener"
+            data-a11y="false"
+            aria-label={`Link to ${option.name}`}
+            href={option.url}
+          >
+            <Icon fill={fill} />
+          </SocialIconContainer>
+        );
+      })}
+    </>
+  );
+}
+```
 
 ```
 twitter_credentials.py
@@ -37,7 +78,7 @@ twitter_credentials.py
 
 Now, let's create `twitter_credentials.py` and store your access keys in it:
 
-```python
+```py
 consumer_key = ""
 consumer_secret = ""
 access_token = ""
@@ -50,7 +91,7 @@ Copy and paste the keys and access tokens from Twitter into the appropriate vari
 
 This should be the easiest part of the whole process!
 
-```
+```cli
 pip install tweepy
 pip install markovify
 ```
@@ -61,14 +102,14 @@ That's it! Now we're ready to code.
 
 OK, let's dive into the code. Make yourself a `tweetbot.py`, and import Tweepy and your Twitter keys:
 
-```python
+```py
 import tweepy
 from twitter_credentials import consumer_key, consumer_secret, access_token, access_token_secret
 ```
 
 Now we need to get authorized with Twitter. Tweepy makes this super simple:
 
-```python
+```py
 auth = tweepy.OAuthHandler(consumer_key, consumer_secret)
 auth.set_access_token(access_token, access_token_secret)
 api = tweepy.API(auth)
@@ -76,7 +117,7 @@ api = tweepy.API(auth)
 
 Let's test it out!
 
-```
+```py
 api.update_status("Hello, world! Just testing Python twitter automation with tweepy")
 ```
 
@@ -96,31 +137,27 @@ Before generating Markov chains, we'll need a corpus. This doesn't need to be an
 
 #### It's Markov time!
 
-In your `tweetbot.py` you'll need to import Markovify:
+In your `tweetbot.py` you'll need to import Markovify. Then, we'll load up the corpus and build a model with it.
 
-```python
+```py
 import markovify
-```
 
-Now we'll load up the corpus and build a model with it.
-
-```python
 with open("corpus.txt") as corpus_file:
-	corpus = corpus_file.read()
+    corpus = corpus_file.read()
 
 model = markovify.Text(corpus)
 ```
 
 Time to take our new Markov model for a spin! The `make_sentence()` method will generate a sentence from your model:
 
-```python
+```py
 In[1]: model.make_sentence()
 Out[1]: 'I remembered the answer of the house, and once attempted chastisement; but as mere strangers, they had to deceive a fine old hall, rather neglected of late occurrence.'
 ```
 
 It worked! But if we want our bot to post on Twitter, we'll need to find a way to keep the length of the generated sentences under 140 characters. Conveniently, Markovify provides the `make_short_sentence()` method to do exactly that. Let's give it a try!
 
-```python
+```py
 In[2]: model.make_short_sentence(140)
 Out[2]: 'Refuse to be happy at his features, beautiful in their still severity; at his eyes, bright and dark conjectures.'
 
@@ -139,25 +176,25 @@ Let's pause a moment and figure out what we want our bot to do before we start w
 - Tweet those sentences
 - Automate itself to tweet every X seconds
 
-Let's try to break this down into some variables and methods. Clearly, we'll need to give our bot a `corpus` to load and a `delay` in seconds between tweets. We'll need to store a markov `model` in order to generate tweets. We've also seen from noodling with Tweepy that we'll need an `api` object. Of these, the `api` and the `model` are the only ones we'll need to use repeatedly, so they'll be class fields; the other two need merely be method arguments. As for methods: we'll only need to authenticate, load our corpus, and make our model once, so it makes sense to put these in the constructor. However, if we pull out the corpus and modeling into a helper method, we'll also be able to change our corpus after the bot is initilized. Making sentences and tweeting them can go in the same method, since we'll always be doing both together. Lastly, automating can be its own thing. If we mock up those class methods, it'll look like this:
+Let's try to break this down into some variables and methods. Clearly, we'll need to give our bot a `corpus` to load and a `delay` between tweets. We'll need to store a Markovify `model` in order to generate tweets. We've also seen from noodling with Tweepy that we'll need an `api` object. Of these, the `api` and the `model` are the only ones we'll need to use repeatedly, so they'll be class fields; the other two need merely be method arguments. As for methods: we'll only need to authenticate, load our corpus, and make our model once, so it makes sense to put these in the constructor. However, if we pull out the corpus and modeling into a helper method, we'll also be able to change our corpus after the bot is initilized. Making sentences and tweeting them can go in the same method, since we'll always be doing both together. Lastly, automating can be its own thing. If we mock up those class methods, it'll look like this:
 
-```python
+```py
 class TweetBot:
     def __init__(self, corpus):
-    	#load corpus & build model
-        #initialize Twitter authorization with Tweepy
+        # load the text corpus & build a model
+        # initialize Twitter authorization with Tweepy
         pass
 
     def load_corpus(self, corpus):
-        #open our corpus & run it through Markovify
+        # open our corpus & run it through Markovify
         pass
 
     def tweet(self):
-        #generate Markov tweet & send it
+        # generate Markov tweet & send it
         pass
 
     def automate(self, delay):
-        #automatically tweet every delay seconds
+        # automatically tweet every `delay` seconds
         pass
 ```
 
@@ -169,11 +206,11 @@ Now that we know what our bot class will look like, let's start filling in the c
 
 If we want to initialize our Markov model in the constructor, we'll need to pass it the path to our `corpus`. We can then call the `load_corpus` method we'll later write. As for the authentication, it'll work just the same as in our earlier Tweepy exploration, except that we'll need to store it in a field.
 
-```python
+```py
     def __init__(self, corpus):
         self.load_corpus(corpus)
 
-        #initialize Twitter authorization with Tweepy
+        # initialize Twitter authorization with Tweepy
         auth = tweepy.OAuthHandler(consumer_key, consumer_secret)
         auth.set_access_token(access_token, access_token_secret)
         self.api = tweepy.API(auth)
@@ -183,7 +220,7 @@ If we want to initialize our Markov model in the constructor, we'll need to pass
 
 Just like in our Markovify example, this method will take the path to our corpus file, load its contents into a variable, and train a Markov `model` with it. We'll then store the `model` as a field.
 
-```python
+```py
     def load_corpus(self, corpus):
         with open(corpus) as corpus_file:
             corpus_lines = corpus_file.read()
@@ -194,7 +231,7 @@ Just like in our Markovify example, this method will take the path to our corpus
 
 We've already seen how to generate a tweet from our `model` and how to update our status, so we can just put them together. However, we don't want our bot to crash if a tweet fails for some reason (say, an improperly-formed tweet, or hitting a rate limit). So, let's wrap it in a try-except block to catch any Tweepy errors that get thrown.
 
-```python
+```py
     def tweet(self):
         message = self.model.make_short_sentence(140)
         try:
@@ -207,13 +244,13 @@ We've already seen how to generate a tweet from our `model` and how to update ou
 
 Now we just need to get our bot to post every `delay` seconds until we stop it. The easiest way to do this is Python's `sleep` function. Let's import it:
 
-```python
+```py
 from time import sleep
 ```
 
 Now the rest is trivial.
 
-```python
+```py
     def automate(self, delay):
         while True:
             self.tweet()
@@ -224,7 +261,7 @@ Now the rest is trivial.
 
 Now that we have all the pieces, let's put them together, then write ourselves a main method to automatically tweet every hour.
 
-```python
+```py
 import tweepy
 import markovify
 from time import sleep
@@ -235,7 +272,7 @@ class TweetBot:
     def __init__(self, corpus):
         self.load_corpus(corpus)
 
-        #initialize Twitter authorization with Tweepy
+        # initialize Twitter authorization with Tweepy
         auth = tweepy.OAuthHandler(consumer_key, consumer_secret)
         auth.set_access_token(access_token, access_token_secret)
         self.api = tweepy.API(auth)
@@ -259,8 +296,8 @@ class TweetBot:
 
 
 def main():
-	bot = TweetBot("corpus.txt")
-	bot.automate(3600)
+	  bot = TweetBot("corpus.txt")
+	  bot.automate(3600)
 
 if __name__ == "__main__":
     main()
@@ -268,7 +305,7 @@ if __name__ == "__main__":
 
 Now, we can run our bot from the command line:
 
-```
+```cli
 python tweetbot.py
 ```
 
@@ -279,3 +316,7 @@ Check your bot's Twitter feed, and you should see a new tweet. Congrats! You've 
 That's all there is to it! If you want to see this code in action, you can check out my bot [@MechaBronte](https://twitter.com/MechaBronte). Lastly, if you want to see where we'll eventually be going with this, [all my code is up on GitHub](https://github.com/vivshaw/tweeter-robo).
 
 Happy botsmithing!
+
+export default ({ children }) => (
+  <ArticlePage meta={meta}>{children}</ArticlePage>
+);
