--- a/pages/blog/linux-on-windows/index.mdx
+++ b/pages/blog/linux-on-windows/index.mdx
@@ -1,4 +1,8 @@
+import Image from "next/image";
+import ArticlePage from "@templates/article.template";
 import metaImage from "./malte-michels-s4wGZw3UuLk-unsplash.jpg";
+import wslColorProbs from "./wsl-color-probs.png";
+import wslTmux from "./wsl-tmux.png";
 
 export const meta = {
   date: new Date("2017-07-03"),
@@ -6,7 +10,7 @@ export const meta = {
   blurb: "Windows 10 finally finds its killer app: Linux",
   tags: ["linux", "windows", "bash", "WSL", "X"],
   image: metaImage,
-  toc: false,
+  slug: "linux-on-windows",
 };
 
 If you, like me, are one of those devs who prefer a Linux environment but are stuck on Windows because of reasons (in my case, accessibility software), if you're tired of struggling with Cygwin and MinGW, if you're put off by the hassle of running everything in VMs: do yourself a favor & try [Windows Subsystem for Linux](https://msdn.microsoft.com/en-us/commandline/wsl/about). It may sound like just another Cygwin-alike, but trust me, it is way better.
@@ -17,7 +21,12 @@ WSL is a compatibility layer that implements Linux system calls on top of the Wi
 
 There are limits, of course: there remain unimplemented system calls which will totally break some programs (for example, until recently all Haskell programs were broken due to unimplemented `timer_create`), and anything graphical is not officially supported. Using Linux cli apps in a Windows CMD or Powershell can also make things look pretty wonky. This was supposed to be [Solarized](http://ethanschoonover.com/solarized):
 
-![WSL in Powershell, showing completely incorrect colors](wsl-color-probs.png)
+<div className="Image__Small">
+  <Image
+    src={wslColorProbs}
+    alt="WSL in Powershell, showing completely incorrect colors"
+  />
+</div>
 
 Personally, I got fed up with Powershell after spending days trying to get my dotfiles working. But why stop at what's officially supported?
 
@@ -33,8 +42,17 @@ Ultimately I managed to get vim, tmux, zsh, urxvt, feh, and Powerline working th
 
 Here's my current setup:
 
-![tmux, vim, zsh, and Poewrline operating inside urxvt on WSL](wsl-tmux.png)
+<div className="Image__Small">
+  <Image
+    src={wslTmux}
+    alt="tmux, vim, zsh, and Poewrline operating inside urxvt on WSL"
+  />
+</div>
 
 ## But is it useful?
 
 My assessment: heck yeah! I've been using this as my primary C/C++ dev environment for about two weeks now and it is lightyears beyond trying to hack everything together on Windows utilities & MinGW. It'll never be as smooth as a real Linux install, but it's more than good enough to do real work in. For as long as I'm stuck on Windows, I plan to keep exploring and expanding this.
+
+export default ({ children }) => (
+  <ArticlePage meta={meta}>{children}</ArticlePage>
+);
