--- a/pages/blog/robot-brain-scala/index.mdx
+++ b/pages/blog/robot-brain-scala/index.mdx
@@ -1,3 +1,4 @@
+import ArticlePage from "@templates/article.template";
 import metaImage from "./muneeb-syed-x9NfeD3FpsE-unsplash.jpg";
 
 export const meta = {
@@ -6,6 +7,7 @@ export const meta = {
   blurb: "Exploring computer vision with a from-scratch neural net in Scala",
   tags: ["scala", "ml", "neural networks", "MNIST", "computer vision"],
   image: metaImage,
+  slug: "robot-brain-scala",
 };
 
 ### Or, a Python Dev Hacks Together a Neural Network From Scratch in (Bad) Scala
@@ -13,8 +15,6 @@ export const meta = {
 Sometimes, on a lazy Saturday afternoon in the doldrums of one's spirit, one must hack together an artificial brain and teach it how to read. I've been working through [Michael Nielsen](http://michaelnielsen.org/)'s excellent textbook [Neural Networks and Deep Learning](http://neuralnetworksanddeeplearning.com/). Because my hubris outweighs my prudence, I decided that rather than work the exercises in Python, I'd learn some more Scala while I'm at it. Thus, Reader dearest, the fruit of my day's labour: a neural network built from scratch in Scala and trained to recognize handwritten digits. I'm using [Breeze](https://github.com/scalanlp/breeze) for my matrix algebra. My Scala's still rather non-idiomatic (you can probably tell my Python background from the profusion of mutable state and copious abuse of zip and comprehensions), but— it works well enough for a second-ever Scala project, which is all I could ask. My code's up [on GitHub](https://github.com/vivshaw/scriptophile); if you catch any errors, [let me know](https://twitter.com/irreduce)!
 
 All my code here is based on Nielsen's algorithms, so if you want to learn this stuff, [go read his book](http://neuralnetworksanddeeplearning.com/). Did I mention it's free?
-
-<!--include toc.html -->
 
 ## Grab and clean our data
 
@@ -264,3 +264,7 @@ Awesome! Everything works, and we're getting over 94% acuracy with handwritten d
 If we want to make further improvements, we could spend a while tweaking our metaparameters or algorithms. But, I think I'll move on for now. My intent for this project was simply to learn the algorithms. For practical purposes, rolling one's own NN is likely suboptimal. If we want to apply neural networks to real problems, we'd be much better off working with one of the many optimized and tested neural network libraries out there, like [Torch](http://torch.ch/) or [Keras](https://keras.io/). As it so happens, I hope to explore exactly that over the next few weeks using Keras with TensorFlow.
 
 As always, if you want to see the code, [it's up on GitHub](https://github.com/vivshaw/scriptophile) for your viewing pleasure. Happy brain-building!
+
+export default ({ children }) => (
+  <ArticlePage meta={meta}>{children}</ArticlePage>
+);
