--- a/pages/blog/build-you-a-tweetbot/index.mdx
+++ b/pages/blog/build-you-a-tweetbot/index.mdx
@@ -1,5 +1,7 @@
+import Image from "next/image";
 import ArticlePage from "@templates/article.template";
 import metaImage from "./bart-zimny-W5XTTLpk1-I-unsplash.jpg";
+import tweepyExample from "./tweepy-example.png";
 
 export const meta = {
   date: new Date("2017-01-25"),
@@ -123,7 +125,9 @@ api.update_status("Hello, world! Just testing Python twitter automation with twe
 
 Head over to your bot's twitter, and you should see a tweet!
 
-![Hello World from Tweepy!][example1]
+<div className="Image__Small">
+  <Image src={tweepyExample} alt="Example bot tweet" />
+</div>
 
 If this worked out for you, you're all set to move on to our next challenge: procedural text generation.
 
