--- a/pages/blog/data-mashups/index.mdx
+++ b/pages/blog/data-mashups/index.mdx
@@ -1,3 +1,4 @@
+import ArticlePage from "@templates/article.template";
 import metaImage from "./chuttersnap-rEEvBPZf4CQ-unsplash.jpg";
 
 export const meta = {
@@ -14,7 +15,11 @@ export const meta = {
     "leaflet",
   ],
   image: metaImage,
-  toc: "false",
+  slug: "data-mashups",
 };
 
 The delightful [Alison Cossette](https://twitter.com/alison_cossette) and I just co-presented a talk at [Burlington Data Science](https://www.meetup.com/Burlington-Data-Scientists/) on using public data for business purposes. (My first talk ever!) My half of the talk was about using Python, Javascript, & GIS systems to mash up public economic & geographic datasets to build interactive visualizations of trends in employment within the IT industry. [My slides & demo apps are up here](https://vivshaw.github.io/4-19-public-data-talk/).
+
+export default ({ children }) => (
+  <ArticlePage meta={meta}>{children}</ArticlePage>
+);
