--- a/pages/blog/robot-brain-scala/index.mdx
+++ b/pages/blog/robot-brain-scala/index.mdx
@@ -10,7 +10,7 @@ export const meta = {
   slug: "robot-brain-scala",
 };
 
-### Or, a Python Dev Hacks Together a Neural Network From Scratch in (Bad) Scala
+## Or, a Python Dev Hacks Together a Neural Network From Scratch in (Bad) Scala
 
 Sometimes, on a lazy Saturday afternoon in the doldrums of one's spirit, one must hack together an artificial brain and teach it how to read. I've been working through [Michael Nielsen](http://michaelnielsen.org/)'s excellent textbook [Neural Networks and Deep Learning](http://neuralnetworksanddeeplearning.com/). Because my hubris outweighs my prudence, I decided that rather than work the exercises in Python, I'd learn some more Scala while I'm at it. Thus, Reader dearest, the fruit of my day's labour: a neural network built from scratch in Scala and trained to recognize handwritten digits. I'm using [Breeze](https://github.com/scalanlp/breeze) for my matrix algebra. My Scala's still rather non-idiomatic (you can probably tell my Python background from the profusion of mutable state and copious abuse of zip and comprehensions), but— it works well enough for a second-ever Scala project, which is all I could ask. My code's up [on GitHub](https://github.com/vivshaw/scriptophile); if you catch any errors, [let me know](https://twitter.com/irreduce)!
 
