author page works!

--- a/pages/blog/data-mashups/index.mdx
+++ b/pages/blog/data-mashups/index.mdx
@@ -3,7 +3,7 @@ import metaImage from "./chuttersnap-rEEvBPZf4CQ-unsplash.jpg";
 
 export const meta = {
   date: new Date("2017-05-05"),
-  title: "Minipost: Data Mashups: Remix Your Way To Interactive Visualizations",
+  title: "Data Mashups: Remix Your Way To Interactive Visualizations",
   blurb: "",
   tags: [
     "python",
@@ -17,6 +17,8 @@ export const meta = {
   image: metaImage,
   slug: "data-mashups",
 };
+
+<!--- TODO: Fix the Data Mashups talk URL to no longer point ot the old domain-->
 
 The delightful [Alison Cossette](https://twitter.com/alison_cossette) and I just co-presented a talk at [Burlington Data Science](https://www.meetup.com/Burlington-Data-Scientists/) on using public data for business purposes. (My first talk ever!) My half of the talk was about using Python, Javascript, & GIS systems to mash up public economic & geographic datasets to build interactive visualizations of trends in employment within the IT industry. [My slides & demo apps are up here](https://vivshaw.github.io/4-19-public-data-talk/).
 
